Table css fix (text align right)

--- a/app.css
+++ b/app.css
@@ -35,7 +35,7 @@
     width: 18px;
     position: absolute;
     top: -10px;
-    right: 0px;
+    right: 0;
 }
 
 .recent-item-paid .recent-profile > .profile-img {
@@ -108,7 +108,9 @@
     font-size: 14px;
     margin: 0.9em;
 }
-
+.dataTables_wrapper th .dt-body-right{ /* Title: time */
+    text-align: right;
+}
 
 /* Overall ranking table ------------------------------------------------------------ */
 table.dataTable thead th,
